--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,10 @@ img {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+  position: relative;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link:hover,
 .link:focus {
@@ -111,6 +115,9 @@ img {
   padding-top: 32px;
   padding-bottom: 32px;
   align-items: center;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-link:hover,
 .header-link:focus {
@@ -124,6 +131,17 @@ img {
 .communication-icon {
   fill: currentColor;
   margin-right: 10px;
+}
+.current::after {
+content: '';
+display: inline-block;
+width: 100%;
+height: 4px;
+background: var(--accent-color);
+border-radius: 2px;
+position: absolute;
+bottom: 0;
+left: 0;
 }
 
 /* герої */
@@ -213,8 +231,26 @@ img {
 }
 .work-images {
   flex-basis: calc(100% / 3 - 30px);
+  position: relative;
 }
-
+.work-wrap {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+ height: 70px;
+ width: 100%;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ background-color:  rgba(47, 48, 58, 0.8);;
+}
+.work-text {
+  color: var(--primary-white-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1428;
+  
+}
 /* команда */
 .team {
   background-color: #f5f4fa;
@@ -265,7 +301,16 @@ border-radius: 0px 0px 4px 4px;
   justify-content: center;
   border-radius: 50%;
   fill: #AFB1B8;
+  transition-property: background-color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.networks-icon {
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .networks-link:hover,
 .networks-link:focus {
   background-color: var(--accent-color);
@@ -297,6 +342,10 @@ border-radius: 0px 0px 4px 4px;
   border: 1px solid #AFB1B8;
   border-radius: 4px;
   fill: #AFB1B8;
+  transition-property: border-color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .client-link:hover,
 .client-link:focus {
@@ -331,6 +380,9 @@ border-radius: 0px 0px 4px 4px;
   border: none;
   border-radius: 4%;
   padding: 6px 22px;
+  transition-property: color, background-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button .all {
   padding: 6px 25px;
@@ -374,6 +426,9 @@ border-radius: 0px 0px 4px 4px;
 }
 .projects-list {
   display: block;
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .projects-list:hover {
   box-shadow: 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -412,6 +467,9 @@ border-radius: 0px 0px 4px 4px;
   font-size: 14px;
   line-height: 1.7142;
   display: block;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-map:hover,
 .footer-map:focus {
@@ -424,6 +482,9 @@ border-radius: 0px 0px 4px 4px;
   line-height: 1.7143;
   font-style: normal;
   display: block;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-link:focus,
 .footer-link:hover {
@@ -458,6 +519,9 @@ border-radius: 0px 0px 4px 4px;
   border-radius: 50%;
   fill: #FFFFFF;
   background: rgba(255, 255, 255, 0.1);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .join-link:hover,
 .join-link:focus {
